--- a/study/0927.md
+++ b/study/0927.md
@@ -1,8 +1,9 @@
 # 자가제한시스템
 
-마이닝에서 채굴 성곤한 것을 그냥 두면 안됨
+마이닝에서 채굴 성공한 것을 그냥 두면 안됨
 
 - 체인에 블록을 연결함
+  ![iShot_2023-09-27_18 53 22](https://github.com/gayoung106/blockchain-study/assets/98731537/69acf4f1-9c50-481f-9eb1-e2a22a302ec4)
 
 ## 일관된 블록 채굴 시간을 유지하기 위해 수행
 
