2교시: 유효성 검증

--- a/study/0927.md
+++ b/study/0927.md
@@ -12,7 +12,7 @@ getDifficulty(difficulty) {
     const lastBlock = this.getLastBlock();
 
 
-    if (lastBlock.index > 1 && lastBlock.index % 10 === 1) {
+    if (lastBlock.index > 0 && lastBlock.index % 10 === 0) {
       console.log("난이도 조절 시작");
       //이전타임이 필요함
       let prevTime = this.blocks[this.blocks.length - 11].timestamp;
@@ -34,3 +34,37 @@ getDifficulty(difficulty) {
 - 즉, 나머지가 1인 경우 난이도를 체크해서 변경해줌
 - 평균시간은 채굴 난이도 조정 여부를 결정: `avgTime` 을 구해야 함(평균 시간을 구하기 위해 `prevTime`, `lastTime`이 필요)
 - `avgTime`이 20초 미만이면 4로 설정되어 난이도가 높아지고, 20이상이면 1/4로 설정되어 난이도를 감소
+
+# 유효성 검증
+
+```js
+  isValidBlock(preBlock, newBlock) {
+    //1은 genesisBlock을 의미하기 때문에, 유효성 검증을 할 필요 없음
+    if (preBlock.index === 1) return 1;
+    //3가지 조건이 true여야 함
+    return (
+      preBlock.index !== 1 &&
+      preBlock.hash === newBlock.previousHash &&
+      Block.createBlockHash(newBlock) === newBlock.hash
+    );
+  }
+```
+
+- 제네시스 블록이 아니면 true
+- 새로운 블록의 이전 해시와 이전블록의 해시가 같으면 true
+- 새로운 블록의 해시와해시함수를 통해 해시가 같으면 true
+
+```js
+  addBlock(block) {
+    //TODO block 유효성 검증을 진행해야함
+    const lastBlock = this.getLastBlock();
+
+    if (this.isValidBlock(lastBlock, block)) {
+      this.blocks.push(block);
+    } else {
+      console.log("유효하지 않은 블록입니다.");
+    }
+  }
+```
+
+- 블록 유효성 검증 진행
