3교시: 웹소켓 연결 실습

--- a/study/0927.md
+++ b/study/0927.md
@@ -68,3 +68,90 @@ getDifficulty(difficulty) {
 ```
 
 - 블록 유효성 검증 진행
+
+## 유효성 블록체인 검증
+
+- 노드가 새로 만들어졌을때, 블록체인 값을 확인하는 역할
+
+```js
+  /**
+   *
+   * @param {Block[]} blocks
+   * @returns 유효하게 검증된 블록체인
+   */
+  isValidBlockchain(blocks) {
+    // 블록체인의 모든 블록에 접근
+    for (let i = 1; i < blocks.length; i++) {
+      //블락의 하나하나에 대한 index를 훑고 가겠어
+
+      //앞의 블록
+      let preBlock = blocks[i - 1];
+      // 그 다음 블록
+      let curBlock = blocks[i];
+      if (!this.isValidBlock(preBlock, curBlock)) {
+        //두개의 블락의 값을 비교(검증진행)
+
+        return false;
+      }
+    }
+  }
+```
+
+- 앞의 블록과 그 다음 블록 두개의 값을 비교하면서 검증을 진행
+
+# P2P 네트워크
+
+- 두 개의 노드가 존재하고, 서로 연결되어 소통
+- 각자에게 json이라는 데이터를 주고 받음
+- JSON이라는 데이터를 주고 받도록 하는 연결 통로가 필요함
+- 그 연결통로가 바로 `소켓`임
+- 소켓을 대표하는 것? 웹소켓, socket.io
+
+## 웹소켓
+
+- 서버와 클라이언트 구조
+- 클라이언트가 서버에 요청(request)함
+- 서버는 클라이언트 요청에 대해 응답(response)함
+- HTTP TCP 통신이 대표적
+- 하지만 이는 양방향임(즉, 서로 요청과 응답이 가능)
+- 즉, `통신`이 됨
+
+```js
+const { WebSocketServer } = require("ws");
+```
+
+```js
+const { WebSocketServer } = require("ws");
+
+class P2PServer {
+  constructor() {
+    this.sockets = [];
+  }
+  //계속해서 듣고 있는 상태
+  listen() {
+    const server = new WebSocketServer({ port: 7545 });
+    server.on("connection", (socket, req) => {
+      //콜백함수의 첫번재 인자는, 연결하고자 하는 다른 노드임
+      const address = req.socket.remoteAddress;
+      const port = req.socket.remotePort;
+      console.log("Success connection!!");
+      this.sockets.push(socket);
+      //연결된 소켓을 sockets안에 배열에 넣어둠
+    });
+  }
+  //sockets안에 있는 배열은
+  //나와 연결된 모든 노드들에게 내용을 전파하기 위함
+  broadcast(data) {
+    this.sockets.forEach((socket) => socket.send(JSON.stringify(data)));
+  }
+}
+
+module.exports = P2PServer;
+```
+
+#### 실행시켰더니?
+
+![iShot_2023-09-27_21 06 26](https://github.com/gayoung106/blockchain-study/assets/98731537/0ca55d21-5cc3-449a-85d6-74902c7c6b03)
+
+- 아무것도 실행이 안됨 가만히 있음
+- 바로 listen 상태이기 때문
