4교시: 소켓 진행중

--- a/study/0927.md
+++ b/study/0927.md
@@ -155,3 +155,41 @@ module.exports = P2PServer;
 
 - 아무것도 실행이 안됨 가만히 있음
 - 바로 listen 상태이기 때문
+
+### 연결
+
+```js
+listen() {
+    const server = new WebSocketServer({ port: 7545 });
+    server.on("connection", (socket, req) => {
+      //콜백함수의 첫번재 인자는, 연결하고자 하는 다른 노드임
+      const address = req.socket.remoteAddress;
+      const port = req.socket.remotePort;
+      console.log(`Success connection!! ${address}:${port}`);
+      this.connectSocket(socket, "server");
+      //연결된 소켓을 sockets안에 배열에 넣어둠
+    });
+  }
+
+  connectToPeer(newPeer) {
+    const socket = new WebSocket(newPeer);
+    socket.on("open", () => {
+      console.log("open");
+      this.connectSocket(socket, "client");
+    });
+  }
+
+  connectSocket(socket, name) {
+    console.log(name);
+    this.sockets.push(socket);
+    this.messageHandler(socket);
+    const data = {
+      type: MessageType.latest_block,
+      payload: name,
+    };
+    this.send(socket, data);
+  }
+```
+
+- 2개의 노드가 실행되자마자 연결돼서 통신함
+  ![iShot_2023-09-27_21 47 09](https://github.com/gayoung106/blockchain-study/assets/98731537/693c286b-7bee-43af-862a-3cc40500b9e8)
